# catalog-scraping-agent

./: .env.example  .gitignore  README.md  pyproject.toml
catalog_agent/: __init__.py  __main__.py  ai.py  alternatives.py  cli.py  extractor.py  http.py  models.py  navigator.py  orchestrator.py  parsing.py  storage.py  validator.py
config/: categories.json
output/sample/: products.csv  products.json
tests/: test_ai.py  test_alternatives.py  test_cli.py  test_extractor.py  test_parsing.py  test_storage.py
tests/fixtures/: category.html  product.html
